Fix logo align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@ a:hover {
 
 .logo {
     text-align: left;
-    min-width: 50%;
+    min-width: 100%;
 
 }
 
@@ -111,7 +111,7 @@ a:hover {
     .logo {
         text-align: center;
         margin: 0px;
-        min-width: 60%;
+        min-width: 50%;
     }
 
     .logo>span {
